[package] 
name="ouros"
version="0.1.0"
authors=["rajiv"]

[lib]
crate-type=["staticlib"]

[dependencies]
rlibc = "*"
spin = "0.4.5"
multiboot2 = "0.1.0"
bitflags = "0.7.0"
x86_64 = "0.1.0"
x86 = "0.8.1"

[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
